{\colortbl;\red255\green255\blue255;\red25\green54\blue109;}
\margl1440\margr1440\vieww14840\viewh9500\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\ql\qnatural\pardirnatural

\f0\fs24 \cf0 Portfolio Theme 0.6\
\
- Made further updates for WordPress 3.1 compatibility\
- Added options panel (props WooThemes)\
\
Portfolio Theme 0.5.3\
\
- Fixed pagination issue when portfolio template was set to home page\
- Added portfolio icon designed by Ben Dunkle, core WordPress designer, Field 2 design, field2.com\
- Added french translations from Wolforg at http://www.wptrads.fr/portfolio-press/\
- Updated description to link to demonstration video and french translation note\
- Changed from type-portfolio.php to archive-portfolio.php in preparation for 3.1\
\
Portfolio Theme 0.5.2\
\
- Added Spanish translations and the domain for backend localizations, props http://www.labitacoradeltigre.com\
- For complete instructions in Spanish, read: http://bit.ly/dyFGYr\
- Added complete RTL stylesheet support\
- Updated to version 0.9.3 of the simple-custom-post-type-archives drop in plugin\
- Deleted title filter for custom post types in functions.php\
- Added password protection ability to portfolio post type templates\
- Added add_image_size( 'portfolio-large', 630, 9999, false ); because large images were being browser resized\
\
Portfolio Theme 0.5.1\
\
- Updated the text domain for translations\
- Made the name change to "Portfolio Press" to comply with repo guidelines\
\
Portfolio Theme 0.5\
\
- Added templates for full-width portfolio, and taxonomy portfolio-tags\
- Updated style.css for new templates and for full-width page template\
- Added additional thumbnail size for the full width portfolio templates\
\
Portfolio Theme 0.44\
\
- Updated style.css and reset.css to have styling for sub & sup html tags + code, pre, dl, dt, dd, abbr, cite\
\
Portfolio Theme 0.43\
\
- Updated style.css to have a clear on the .entry-utility\