@@ -1,10 +1,10 @@
 /*
 Theme Name: Portfolio Press
-Description: A portfolio theme for showcasing your work with custom post types.  WordPress 3.0 required.  For a video screencast showing how to set up the portfolio, visit http://wptheming.com/portfolio-theme.  Spanish and French translations included.
+Description: Portfolio Press an excellent theme for showcasing your photography, art, web sites, or other projects.  It also works good for a regular blog sites.  The theme includes a nice options panel for uploading logos and and changing the layout. WordPress 3.0 or higher is required.  For a video screencast showing how to set up the portfolio, visit http://wptheming.com/portfolio-theme.  Spanish and French translations included.
 Author: Devin Price
 Author URI: http://wptheming.com/
 Theme URI: http://wptheming.com/portfolio-theme/
-Version: 0.5.5
+Version: 0.6
 Tags: translation-ready, microformats, two-columns, custom-menu
 
 Credits:
